--- a/Styles/index.css
+++ b/Styles/index.css
@@ -7,7 +7,19 @@
 }
 
 body {
+  min-height: 100vh;
   background-image: url("../Assets/Images/main-bg.jpg");
+  background-position: 0px 0px;
+  animation: animatedBackground 40s linear infinite alternate;
+}
+
+@keyframes animatedBackground {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 0;
+  }
 }
 
 .frontShadow {
@@ -34,6 +46,12 @@ body {
 .hover--rotate:hover {
   cursor: pointer;
   transform: rotate(-2deg);
+}
+
+.hover--innerShadow:hover {
+  box-shadow: inset 200px 0 0 0 #1272e3;
+  color: white;
+  cursor: pointer;
 }
 
 /* -------------------------Estilos de la Landing Section---------------------------- */
@@ -126,7 +144,7 @@ body {
   width: 170px;
 }
 
-.landing__socialIMG{
+.landing__socialIMG {
   width: 52px;
   height: 52px;
   background-color: #ffffff;
@@ -139,3 +157,5 @@ body {
 }
 
 /* Final de las redes sociales en el Landing */
+
+/* ------------------------- Estilos de la Sección de Proyectos ---------------------------- */
