--- a/Styles/index.css
+++ b/Styles/index.css
@@ -8,6 +8,7 @@
 
 body {
   min-height: 100vh;
+  padding: 40px 0;
   background-image: url("../Assets/Images/main-bg.jpg");
   background-position: 0px 0px;
   animation: animatedBackground 40s linear infinite alternate;
@@ -20,6 +21,11 @@ body {
   to {
     background-position: 100% 0;
   }
+}
+
+.centerObject {
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .frontShadow {
@@ -165,6 +171,7 @@ body {
   padding: 5%;
   min-height: 100vh;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -179,13 +186,15 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
 /* Inicio de los proyectos de la Sección de Proyectos */
 
 .projects__project {
   width: 550px;
-  max-width: 90vw;
   padding: 20px;
   background-color: #d9d9d9;
   border-radius: 10px;
@@ -211,8 +220,176 @@ body {
   row-gap: 10px;
 }
 
-.projects__projectTitle{
+.projects__projectTitle {
   text-align: center;
 }
 
+.projects__centerText {
+  text-align: center;
+}
+
+.projects__projectRedirections {
+  margin: 0 auto;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects__projectLink {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #000000;
+  border: 2px solid #000000;
+}
+
+.projectLink__left {
+  padding: 5px 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.projectLink__left:hover {
+  box-shadow: inset 120px 0 0 0 #1272e3;
+  color: white;
+}
+
+.projectLink__right {
+  padding: 5px 26px;
+  border-left: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.projectLink__right:hover {
+  box-shadow: inset 120px 0 0 0 #1272e3;
+  color: white;
+}
+
 /* Final de los proyectos de la Sección de Proyectos */
+
+/* Inicio de la Sección del Algoritmo */
+
+.algorithm {
+  width: 100%;
+  min-height: 100vh;
+}
+
+/* Final de la Sección del Algoritmo */
+
+/* Inicio de la Sección del About Me */
+
+.about {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.about__titleContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Inicio de la parte con información personal */
+
+.about__aboutMe {
+  width: 650px;
+  max-width: 90%;
+  padding: 15px;
+  background-color: #d9d9d9;
+  border-radius: 10px;
+}
+
+.aboutMe__img {
+  width: 230px;
+  height: 230px;
+  margin: 0 30px 20px 0;
+  border-radius: 10px;
+}
+
+.aboutMe__text {
+  margin: 15px 0;
+  padding: 0 18px;
+}
+
+.about__downloadCV {
+  width: fit-content;
+  margin: 25px auto 0;
+}
+
+.about__downloadShadow {
+  width: 202px;
+}
+
+/* Final de la parte con información personal */
+
+/* Inicio de la parte con las tecnologías */
+
+.about__technologies {
+  width: 650px;
+  max-width: 90%;
+  padding: 15px;
+  background-color: #d9d9d9;
+  border-radius: 10px;
+}
+
+.about__technologiesShadow {
+  width: 232px;
+}
+
+.about__alsoShadow {
+  width: 271px;
+}
+
+.about__technologiesContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 10px;
+  margin-bottom: 50px;
+}
+
+.about__technology {
+  width: 110px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.about__technologyIMG {
+  width: 104px;
+  height: 104px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.about__technology--hover {
+  background-color: #000000;
+  width: 110px;
+  border-radius: 5px;
+  color: #ffffff;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.about__technology:hover > .about__technology--hover {
+  opacity: 1;
+}
+
+/* Final de la parte con las tecnologías */
+
+/* Final de la Sección del About Me */
