--- a/Styles/index.css
+++ b/Styles/index.css
@@ -60,6 +60,14 @@ body {
   cursor: pointer;
 }
 
+.mainTitleContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+
 .mainTitle {
   width: 1000px;
   max-width: 90%;
@@ -320,9 +328,9 @@ body {
 }
 
 .frontShadow.active {
-    box-shadow: inset 200px 0 0 0 #1272e3;
-    color: white;
-    cursor: pointer;
+  box-shadow: inset 200px 0 0 0 #1272e3;
+  color: white;
+  cursor: pointer;
 }
 
 .algorithm__algorithmContainer {
@@ -330,7 +338,7 @@ body {
   max-width: 90vw;
   height: 500px;
   padding: 20px 40px;
-  background-color: #3C3838;
+  background-color: #3c3838;
   margin-top: 30px;
   margin-bottom: 30px;
   border-radius: 10px;
@@ -345,12 +353,24 @@ body {
   background-color: #ffffff;
 }
 
-.algorithm__bar.inProgress{
-  background-color: #EAEBB2;
+.algorithm__bar.inProgress {
+  background-color: #eaebb2;
 }
 
-.algorithm__bar.sorted{
-  background-color: #2BA153;
+.algorithm__bar.sorted {
+  background-color: #2ba153;
+}
+
+.algorithm__sortButtons{
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.algorithm__sortButtons:hover {
+  box-shadow: inset 200px 0 0 0 #1272e3;
+  color: white;
 }
 
 /* * Final de la Sección del Algoritmo */
@@ -366,13 +386,6 @@ body {
   flex-wrap: wrap;
   column-gap: 20px;
   row-gap: 20px;
-}
-
-.about__titleContainer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 /* Inicio de la parte con información personal */
@@ -395,11 +408,6 @@ body {
 .aboutMe__text {
   margin: 15px 0;
   padding: 0 18px;
-}
-
-.about__downloadCV {
-  width: fit-content;
-  margin: 25px auto 0;
 }
 
 .about__downloadShadow {
@@ -471,3 +479,73 @@ body {
 /* * Final de la Sección del About Me */
 
 /* * -------------------------Inicio de la Sección de Contacto---------------------------- */
+
+.contact {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.contact__social {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+.contact__form{
+  width: 470px;
+  padding-top: 20px;
+  border-radius: 10px;
+  background-color: #d9d9d9;
+  border: 2px solid #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 20px;
+}
+
+.contact__formTitle {
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.contact__messageTitle {
+  width: 90%;
+  height: 30px;
+  padding-left: 10px;
+  border-radius: 8px;
+  border: 1px solid #000000;
+}
+
+.contact__message {
+  width: 90%;
+  height: 150px;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #000000;
+}
+
+.contact__mapContainer {
+  width: 470px;
+  max-width: 90vw;
+}
+
+.contact__map {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  border: 2px solid #000000;
+}
+
+.contact__mapText {
+  padding: 10px 15px;
+  border-radius: 10px;
+  background-color: #d9d9d9;
+  border: 2px solid #000000;
+}
