--- a/Styles/index.css
+++ b/Styles/index.css
@@ -29,6 +29,7 @@ body {
 }
 
 .frontShadow {
+  max-width: 90%;
   text-align: center;
   padding: 10px 30px;
   border-radius: 10px;
@@ -42,7 +43,7 @@ body {
 
 .shadow {
   display: block;
-  max-width: 90vw;
+  max-width: 90%;
   height: 45px;
   border-radius: 10px;
   background-color: #ffffff;
@@ -121,12 +122,12 @@ body {
 /* Inicio de la información de presentación */
 
 .landing__mainTextContainer {
-  width: 1000px;
-  max-width: 90%;
-  margin-left: 5%;
-  height: 350px;
-  max-height: 50vh;
-  padding: 30px;
+  width: 800px;
+  max-width: 90vw;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: fit-content;
+  padding: 17px;
   background-color: #d9d9d9;
   border-radius: 20px;
   display: flex;
@@ -324,7 +325,7 @@ body {
 }
 
 .algorithmSelector__text {
-  margin: 20px 0 0 20px;
+  margin: 20px 0 12px 20px;
 }
 
 .frontShadow.active {
@@ -401,6 +402,7 @@ body {
 .aboutMe__img {
   width: 230px;
   height: 230px;
+  max-width: 100%;
   margin: 0 30px 20px 0;
   border-radius: 10px;
 }
