Generadas las actualizaciones de valores para los rangos y el cambio de clase active para los botones de algoritmos

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -345,7 +345,7 @@ a {
   margin: 20px 0 12px 20px;
 }
 
-.frontShadow.active {
+.algorithm__option.active {
   box-shadow: inset 200px 0 0 0 #1272e3;
   color: white;
   cursor: pointer;
