--- a/Styles/AlgorithmSection.css
+++ b/Styles/AlgorithmSection.css
@@ -66,10 +66,11 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
+    column-gap: 5px;
   }
   
   .algorithm__bar {
-    width: 25px;
+    width: 100%;
     height: 60px;
     background-color: #ffffff;
   }
