--- a/Styles/LandingSection.css
+++ b/Styles/LandingSection.css
@@ -1,112 +1,114 @@
 /* * -------------------------Estilos de la Landing Section---------------------------- */
 
 .landing {
-    width: 100%;
-    padding: 5%;
-    padding-top: 10%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-  /* * Inicio de los botones de idioma */
-  
-  .landing__languageButtonsContainer {
-    width: 250px;
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-  }
-  
-  .landing__button {
-    width: 135px;
-    height: 40px;
-  }
-  
-  .landing__button:hover {
-    box-shadow: inset 120px 0 0 0 #1272e3;
-    color: white;
-  }
-  
-  .landing__button.active {
-    background-color: #1272e3;
-    color: #ffffff;
-  }
-  
-  .buttonShadow {
-    width: 120px;
-    height: 40px;
-  }
-  
-  /* Final de los botones de idioma */
-  
-  /* Inicio de la información de presentación */
-  
-  .landing__mainTextContainer {
-    width: 800px;
-    max-width: 90vw;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: fit-content;
-    padding: 17px;
-    background-color: #d9d9d9;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-  
-  .landing__mainTextLineContainer {
-    display: flex;
-    column-gap: 20px;
-    row-gap: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .nameShadowWidth {
-    width: 236px;
-  }
-  
-  .roleShadowWidth {
-    width: 290px;
-  }
-  
-  /* Final de la información de presentación */
-  
-  /* Inicio de las redes sociales en el Landing */
-  
-  .landing__socialContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: end;
-  }
-  
-  .landing__contactMeShadowWidth {
-    width: 192px;
-  }
-  
-  .landing__linkedIn {
-    width: 159px;
-  }
-  
-  .landing__github {
-    width: 136px;
-  }
-  
-  .landing__socialIMG {
-    width: 52px;
-    height: 52px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    border: 2px solid #000000;
-    position: relative;
-    left: 23px;
-    top: -4px;
-    z-index: 1;
-  }
-  
-  /* * Final de las redes sociales en el Landing */
+  width: 100%;
+  padding: 5%;
+  padding-top: 10%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+/* * Inicio de los botones de idioma */
+
+.landing__languageButtonsContainer {
+  width: 250px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.landing__button {
+  width: 135px;
+  height: 40px;
+}
+
+.landing__button:hover {
+  box-shadow: inset 120px 0 0 0 #1272e3;
+  color: white;
+}
+
+.landing__button.active {
+  background-color: #1272e3;
+  color: #ffffff;
+}
+
+.buttonShadow {
+  width: 120px;
+  height: 40px;
+}
+
+/* Final de los botones de idioma */
+
+/* Inicio de la información de presentación */
+
+.landing__mainTextContainer {
+  width: 920px;
+  max-width: 90vw;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: fit-content;
+  min-height: 300px;
+  padding: 17px;
+  background-color: #d9d9d9;
+  border-radius: 20px;
+  box-shadow: 5px 5px 3px #5c6bc0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.landing__mainTextLineContainer {
+  display: flex;
+  column-gap: 20px;
+  row-gap: 20px;
+  flex-wrap: wrap;
+}
+
+.nameShadowWidth {
+  width: 236px;
+}
+
+.roleShadowWidth {
+  width: 290px;
+}
+
+/* Final de la información de presentación */
+
+/* Inicio de las redes sociales en el Landing */
+
+.landing__socialContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+}
+
+.landing__contactMeShadowWidth {
+  width: 192px;
+}
+
+.landing__linkedIn {
+  width: 159px;
+}
+
+.landing__github {
+  width: 136px;
+}
+
+.landing__socialIMG {
+  width: 52px;
+  height: 52px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 2px solid #000000;
+  position: relative;
+  left: 23px;
+  top: -4px;
+  z-index: 1;
+}
+
+/* * Final de las redes sociales en el Landing */
