--- a/Styles/ProjectsSection.css
+++ b/Styles/ProjectsSection.css
@@ -30,6 +30,7 @@
   padding: 20px;
   background-color: #d9d9d9;
   border-radius: 10px;
+  box-shadow: 5px 5px 3px #5c6bc0;
   display: flex;
   justify-content: center;
   align-items: center;
