--- a/Styles/index.css
+++ b/Styles/index.css
@@ -15,7 +15,7 @@
 
 body {
   min-height: 100vh;
-  padding: 40px 0;
+  padding: 40px 0 80px 0;
   background-image: url("../Assets/Images/fondoPrincipalPortfolio.webp");
   background-position: 0px 0px;
   animation: animatedBackground 40s linear infinite alternate;
