--- a/Styles/index.css
+++ b/Styles/index.css
@@ -62,6 +62,51 @@ a {
   border: 2px solid #000000;
 }
 
+.titleShadow--noBreak {
+  display: block;
+  max-width: 90%;
+  height: 55px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  position: relative;
+  top: 13px;
+}
+
+.shadow--tall {
+  display: block;
+  max-width: 90%;
+  height: 68px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  position: relative;
+  top: 26px;
+}
+
+.algorithm__titleShadow--height {
+  display: block;
+  height: 58px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  position: relative;
+  top: 16px;
+}
+
+@media (max-width: 503px) {
+  .algorithm__titleShadow--height {
+    display: block;
+    max-width: 90%;
+    height: 84px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    border: 2px solid #000000;
+    position: relative;
+    top: 42px;
+  }
+}
+
 .hover--rotate:hover {
   cursor: pointer;
   transform: rotate(-2deg);
