--- a/Styles/index.css
+++ b/Styles/index.css
@@ -18,7 +18,7 @@ body {
   padding: 40px 0 80px 0;
   background-image: url("../Assets/Images/fondoPrincipalPortfolio.webp");
   background-position: 0px 0px;
-  animation: animatedBackground 40s linear infinite alternate;
+  animation: animatedBackground 20s linear infinite alternate;
 }
 
 @keyframes animatedBackground {
@@ -26,7 +26,7 @@ body {
     background-position: 0 0;
   }
   to {
-    background-position: 100% 0;
+    background-position: 500px 0;
   }
 }
 
