--- a/Styles/AboutSection.css
+++ b/Styles/AboutSection.css
@@ -27,11 +27,12 @@
 
 .aboutMe__img {
   width: 230px;
+  max-width: 100%;
   height: 230px;
+  background-color: #fff;
   object-fit: cover;
   object-position: center;
   filter: brightness(125%);
-  max-width: 100%;
   margin: 0 30px 20px 0;
   border-radius: 10px;
 }
