--- a/Styles/AboutSection.css
+++ b/Styles/AboutSection.css
@@ -54,6 +54,7 @@
   width: 650px;
   max-width: 90%;
   padding: 15px;
+  padding-bottom: 0;
   background-color: #d9d9d9;
   border-radius: 10px;
   box-shadow: 5px 5px 3px #5c6bc0;
