--- a/Styles/ContactSection.css
+++ b/Styles/ContactSection.css
@@ -59,12 +59,13 @@
 
 .contact__map {
   width: 100%;
-  height: 300px;
+  height: 348px;
   border-radius: 10px;
   border: 2px solid #000000;
 }
 
 .contact__mapText {
+  text-align: center;
   padding: 21px 15px;
   border-radius: 10px;
   background-color: #d9d9d9;
