--- a/Styles/AboutSection.css
+++ b/Styles/AboutSection.css
@@ -17,12 +17,19 @@
   width: 650px;
   max-width: 90%;
   padding: 15px;
+  padding-top: 38px;
   background-color: #d9d9d9;
   border-radius: 10px;
   box-shadow: 5px 5px 3px #5c6bc0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.about__aboutMe--english {
+  width: 624px;
+  padding: 30px 15px;
+  padding-top: 64px;
 }
 
 .aboutMe__img {
