--- a/Styles/ProjectsSection.css
+++ b/Styles/ProjectsSection.css
@@ -74,6 +74,7 @@
   text-decoration: none;
   color: #000000;
   border: 2px solid #000000;
+  box-shadow: 3px 3px 3px #5c6bc0;
 }
 
 .projectLink__left {
