--- a/Styles/ProjectsSection.css
+++ b/Styles/ProjectsSection.css
@@ -39,6 +39,12 @@
   row-gap: 20px;
 }
 
+@media (max-width: 611px) {
+  .projects__project {
+    width: 280px;
+  }
+}
+
 .projects__project > img {
   width: 240px;
   height: 240px;
@@ -178,8 +184,7 @@
 }
 
 .projects__modalImg {
-  /* max-width: 40%; */
-  width: 90%;
+  width: calc(100% - 40px);
   height: 400px;
   object-fit: contain;
   border-radius: 10px;
